82230: Fix button spacing issue ~ .input-group-prepend/append

--- a/src/app/shared/form/builder/ds-dynamic-form-ui/relation-lookup-modal/search-tab/dynamic-lookup-relation-search-tab.component.scss
+++ b/src/app/shared/form/builder/ds-dynamic-form-ui/relation-lookup-modal/search-tab/dynamic-lookup-relation-search-tab.component.scss
@@ -1,3 +1,8 @@
 .position-absolute {
     right: var(--bs-spacer);
 }
+
+div.input-group-append {
+  // prevent excessive overlap between prepend/append; Bootstrap doesn't expect them to be right next to eachother
+  margin-left: 0;
+}
